HW11/E-4.3.30-Remove/wdir_msg/compile.err

Remove.java:46: error: cannot find symbol
            if (q.v.equals(key)) 
                 ^
  symbol:   variable v
  location: variable q of type LinkNode
1 error


